Wed Sep 13 10:20:02 1995 Keith Vetter (keithv@fusion.com)

	* windows.in: added windows value for SRCTOP.

Thu Aug 24 19:25:10 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Fri Jul 7 15:56:09 EDT 1995	Paul Park	(pjpark@mit.edu)
	* pre.in - Add DEPLIBS and LDFLAGS to be provided with each Makefile.

Fri Jun 23 14:24:02 1995  Theodore Y. Ts'o  <tytso@dcl>

	* pre.in (SRCTOP): Change SRCTOP so that it's defined in configure
		script, instead of being hardcoded as $(srcdir)/$(BUILDTOP).

Thu Jun 22 13:27:00 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* pre.in (STEXT): Add definitions for STEXT and STATIC_TARGET

Thu Jun 15 17:47:49 EDT 1995	Paul Park	(pjpark@mit.edu)
	* pre.in - Add definitions for building and using shared libraries.
		Add KRB5_SHLIBDIR which is the destination directory for
		shared libraries.

Wed Jun 14 19:34:12 1995  Tom Yu  (tlyu@dragons-lair)

	* pre.in: DO_SUBDIRS causes make {install,clean,check,etc.} to get
		run in subdirectories where they haven't been before.
		Added some blank dependencies to keep things from breaking
		too badly.

Fri Jun  9 18:39:55 1995    <tytso@rsx-11.mit.edu>

	* pre.in: Remove KRB5ROOT

Thu Jun  8 17:44:12 1995    <tytso@rsx-11.mit.edu>

	* pre.in: Define ${prefix} since exec_prefix is sometimes to that.
		Don't create the directories include/krb5 and
		include/kerberosIV when installing.  (They're not needed).

Wed Jun  7 16:08:35 1995    <tytso@rsx-11.mit.edu>

	* pre.in: Use the GNU/configure standard method of prefix and
		exec_prefix to determine where programs get installed.
		The use of KRB5ROOT is obsolete.

Thu May 25 21:36:40 1995  Theodore Y. Ts'o  (tytso@dcl)

	* pre.in(HOST_TYPE, SHEXT, DO_MAKE_SHLIB): Added variables filled
		in by configure 

Wed May 24 15:42:02 1995  Theodore Y. Ts'o  (tytso@dcl)

	* config.guess, config.sub: Added for shared library support.

Mon May 22 09:45:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	* pre.in	- Add gssapi to list of subdirectories.
