@@ -1,3 +1,10 @@
+Mon Sep 25 13:09:17 1995  Theodore Y. Ts'o  <tytso@dcl>
+
+	* windows.in:
+	* mac-pre.in:
+	* pre.in: Added lines of the form "all:: all-$(WHAT)" for all,
+		clean, install, and check.
+
 Wed Sep 13 10:20:02 1995 Keith Vetter (keithv@fusion.com)
 
 	* windows.in: added windows value for SRCTOP.
